--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-deprecated-custom-components": "^0.1.0",
+    "react-native-drawer": "^2.3.0",
+    "react-native-tab-navigator": "^0.3.3",
     "react-navigation": "^1.0.0-beta.9"
   },
   "devDependencies": {
